--- a/item-master.html
+++ b/item-master.html
@@ -51,6 +51,7 @@
           <button class="mode-btn" data-mode="categories" type="button">Categories</button>
           <button class="mode-btn" data-mode="suppliers" type="button">Suppliers</button>
         </div>
+        <div id="catalogStatus" class="muted-text" style="margin:8px 2px 0;">Loading catalog...</div>
       </section>
 
       <div id="items-mode" class="mode-content active">
