--- a/inventory-list.html
+++ b/inventory-list.html
@@ -91,6 +91,7 @@
             <label class="filter-chip"><input id="filter-project" type="checkbox"> Assigned to project</label>
             <label class="filter-chip"><input id="filter-recent" type="checkbox"> Recently checked in</label>
             <label class="filter-chip"><input id="filter-count" type="checkbox"> Needs count</label>
+            <label class="filter-chip"><input id="filter-instock" type="checkbox" checked> In stock only</label>
             <label class="filter-chip scan-toggle"><input id="scanMode" type="checkbox"> Scan mode</label>
             <button id="cycleToggle" type="button" class="muted">Cycle Count Mode</button>
             <button id="saveCountsBtn" type="button" class="muted">Save Counts</button>
@@ -179,6 +180,7 @@
       <label class="mobile-sheet-option"><input id="sheet-filter-project" type="checkbox"> Assigned to project</label>
       <label class="mobile-sheet-option"><input id="sheet-filter-recent" type="checkbox"> Recently checked in</label>
       <label class="mobile-sheet-option"><input id="sheet-filter-count" type="checkbox"> Needs count</label>
+      <label class="mobile-sheet-option"><input id="sheet-filter-instock" type="checkbox" checked> In stock only</label>
       <label class="mobile-sheet-option"><input id="sheet-scan-mode" type="checkbox"> Scan mode</label>
     </div>
     <div class="mobile-sheet-actions">
